Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -301,6 +301,51 @@
 }
 </code></pre>
 
+<h4>
+<a id="community" class="anchor" href="#community" aria-hidden="true"><span class="octicon octicon-link"></span></a>Community</h4>
+
+<p>Provides information about a Community user</p>
+
+<table>
+<thead>
+<tr>
+<th>Property</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>displayName</td>
+<td>String. Display name for the community</td>
+</tr>
+<tr>
+<td>creatorName</td>
+<td>String. Name of the community creator</td>
+</tr>
+<tr>
+<td>country</td>
+<td>String. Name of the country where the community is registered</td>
+</tr>
+<tr>
+<td>city</td>
+<td>String. Name of the city where the community is registered</td>
+</tr>
+<tr>
+<td><strong>userId</strong></td>
+<td><strong>String. Unique identifier of the object</strong></td>
+</tr>
+<tr>
+<td>role</td>
+<td>String. Set to <code>community</code>
+</td>
+</tr>
+<tr>
+<td>description</td>
+<td>String. Self-description as given by the community administrator</td>
+</tr>
+</tbody>
+</table>
+
 <h3>
 <a id="comment" class="anchor" href="#comment" aria-hidden="true"><span class="octicon octicon-link"></span></a>Comment</h3>
 
